k8s/deployment-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: oficina-mecanica

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka

          image: confluentinc/cp-kafka:7.9.1

          ports:
            - containerPort: 9092
            - containerPort: 29092
            - containerPort: 29093

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"
