k8s/deployment-monolito.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-backend
  namespace: oficina-mecanica
spec:
  replicas: 1

  selector: 
    matchLabels:
      app: workshop-backend
  template:
    metadata:
      labels:
        app: workshop-backend

    spec:
      containers:
        - name: workshop-backend

          image: leonardooziro/sistema-oficina-mecanica-mnl

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
