k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-backend
spec:
  replicas: 1

  selector: 
    matchLabels:
      app: workshop-backend
  template:
    metadata:
      labels:
        app: workshop-backend

    spec:
      containers:
        - name: workshop-backend

          image: leonardooziro/sistema-oficina-mecanica-mnl

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
