k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-backend-service
  namespace: oficina-mecanica
spec:
  selector:
    app: workshop-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: oficina-mecanica
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
